# hdx-scraper-worldbank-rtp

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/worldbank_rtfp/: __main__.py  pipeline.py
src/hdx/scraper/worldbank_rtfp/config/: project_configuration.yaml
src/hdx/scraper/worldbank_rtp/: __main__.py  pipeline.py
src/hdx/scraper/worldbank_rtp/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pipeline.py
tests/fixtures/input/: fcv-wld-2021-rtfp-v02-m-limit-1000-offset-0.json  fcv-wld-2023-rtep-v01-m-limit-1000-offset-0.json  fcv-wld-2023-rtep-v01-m-limit-1000-offset-1000.json  fcv-wld-2023-rtfx-v01-m-limit-1000-offset-0.json
